# n8n-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  cron.py  finance.py
app/core/: __init__.py  config.py  logging_config.py
